--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -56,7 +56,7 @@
       <item>es</item>
       <item>fr</item>
       <item>el</item>
-      <item>he</item>
+      <item>iw</item>
       <item>it</item>
       <item>ja</item>
       <item>he</item>
